--- a/main.css
+++ b/main.css
@@ -234,6 +234,7 @@ body {
     color: var(--Grey200);
 
 }
+
 /* color and shadow*/
 
 .colorGH {
@@ -2693,6 +2694,7 @@ button.passwordArr {
     overflow: hidden;
     display: flex;
 }
+
 .LRslides {
     height: 600px;
     width: 80%;
@@ -2770,7 +2772,7 @@ button.passwordArr {
 
     box-shadow: inset 0px 0 0 var(--white), inset 0 0px 0 var(--white), inset 0px 0 0 var(--white), inset 0 0px 0 var(--white);
 
- */    
+ */
     font-weight: 300 !important;
     color: var(--Grey800);
     transition: 0.65s;
@@ -2783,11 +2785,13 @@ button.passwordArr {
     border-radius: 12px;
     display: inline-block;
 }
+
 .slider-nav.noBg {
     color: var(--Grey900);
     border: 0.01em solid var(--Grey100);
 
 }
+
 /*
 .up {
     --color: var(--AMBlue);
@@ -2808,13 +2812,14 @@ button.passwordArr {
 
 .noBg .slider-nav:hover,
 .noBg .slider-nav.active {
-  border: 0.01em solid var(--Grey900);
+    border: 0.01em solid var(--Grey900);
 
-  color: var(--Grey900);
-  box-shadow: inset 0 4.25em 0 0 var(--alert--pink);
-  font-weight: 500 !important;
-  box-shadow: inset 0 -10.25em 0 0 var(--Grey100);
+    color: var(--Grey900);
+    box-shadow: inset 0 4.25em 0 0 var(--alert--pink);
+    font-weight: 500 !important;
+    box-shadow: inset 0 -10.25em 0 0 var(--Grey100);
 }
+
 /*     backup
     font-weight: 500;
     font-family: inherit;
@@ -2876,11 +2881,12 @@ button.passwordArr {
     text-align: center;
     overflow: hidden;
     display: flex;
-flex-direction: column;
+    flex-direction: column;
 }
+
 .TBslides {
     height: 600px;
-    width: 80%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     overflow-y: scroll;
@@ -2916,10 +2922,11 @@ flex-direction: column;
     flex-direction: row;
 
 }
+
 .TBsliderNav {
     font-weight: 300 !important;
     color: var(--Grey800);
-    transition: 0.25s;
+    transition: 0.65s;
     background: none;
     border: 1px solid var(--white);
     font: inherit;
@@ -2929,18 +2936,30 @@ flex-direction: column;
     border-radius: 12px;
     display: inline-block;
 }
-.up {
-    --color: var(--AMBlue);
-    --hover: var(--White-transparent);
+
+.TBsliderNav.noBg {
+    color: var(--Grey900);
+    border: 0.01em solid var(--Grey100)
 }
-.TBsliderNav:active,
+
 .TBsliderNav:hover,
 .TBsliderNav.active {
-    border-color: var(--hover);
+    border-color: var(--White-transparent);
     color: var(--Grey900);
+    box-shadow: inset -4.25em 0 0 0 var(--White-transparent);
+    font-weight: 500 !important;
+    box-shadow: inset 18em 0 0 0 var(--white);
+}
+
+.noBg .TBsliderNav:hover,
+.noBg .TBsliderNav.active {
+    border: 0.01em solid var(--Grey900);
+
+    color: var(--Grey900);
+
     box-shadow: inset -4.25em 0 0 0 var(--hover);
     font-weight: 500 !important;
-    box-shadow: inset 10em 0 0 0 var(--hover);
+    box-shadow: inset 18em 0 0 0 var(--hover);
 }
 
 
