--- a/main.css
+++ b/main.css
@@ -3,10 +3,15 @@ html {
     color: var(--Grey800);
     font-size: 16px;
     font-family: 'Lato', sans-serif;
+    height: 100%;
+
 
 }
 
+
 :root {
+    --height100: 100%;
+
     --img-APPOINT: url('./image/Cover_APPOINTA.jpg');
     --img-SEER: url('./image/Cover_SEER.jpg');
     --img-WS: url('./image/Cover_worksample.png');
@@ -95,6 +100,28 @@ html {
     --GlorifyBlue: #489FD3;
 
 
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 0.8em;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px var(--white);
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--Grey400);
+    border-radius: 6px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: var(--Grey600);
 }
 
 body {
@@ -191,10 +218,12 @@ body {
 .Grey200Bg {
     background-color: var(--Grey200);
 }
-.WhiteBg{
+
+.WhiteBg {
     background-color: var(--white);
 
 }
+
 .colorBgGrey {
     background-color: var(--Grey200);
 }
@@ -525,6 +554,9 @@ polygon {
     height: 150vh;
     padding-top: 70px;
   }  */
+.main {
+    height: 100%;
+}
 
 .header-unpin {
     /* display: none; */
@@ -845,6 +877,12 @@ section {
     }
 
     body .section-nav {
+        margin-left: cals(100% - 332px);
+    }
+
+
+    /* 
+        body .section-nav {
         top: 20rem;
         left: 10vw;
     }
@@ -853,8 +891,7 @@ section {
         font-size: 16px;
         line-height: 20px;
     }
-
-    body .titleRightPanel {
+        body .titleRightPanel {
         font-size: 22px;
         line-height: 32px;
     }
@@ -864,6 +901,11 @@ section {
         position: sticky;
         bottom: 32vh;
     }
+ */
+
+
+
+
 }
 
 /* new nav */
@@ -1052,13 +1094,11 @@ section {
 .subNav {
     position: sticky;
     border-radius: 6px;
-    opacity: 0.8;
     z-index: 3;
     top: 12rem;
 }
 
 .subNav a {
-
     text-decoration: none;
     display: block;
     padding: 12px;
@@ -1095,9 +1135,6 @@ li .newPanelV3 {
 /*new sub nav*/
 
 /*new sub nav V3*/
-
-
-
 .newPanelV3 {
     visibility: hidden;
     height: 0;
@@ -1122,45 +1159,72 @@ li .newPanelV3 {
 /* 1. Enable smooth scrolling */
 /* 2. Make nav sticky */
 main>nav {
-    position: sticky;
     top: 2rem;
-    position: -webkit-sticky;
-    position: sticky;
-    bottom: 18vh;
 }
 
 /* 3. ScrollSpy active styles (see JS tab for activation) */
 .section-nav li.active>a {
     color: var(--Grey900);
     font-weight: 500;
+    border-right: var(--Grey900) 0.01em solid;
+    background-color: var(--Grey100);
+
 }
+
+
+
 
 /* Sidebar Navigation */
 .section-nav {
+    position: sticky;
+    border-radius: 6px;
+    z-index: 3;
+    margin-left: 0;
+    width: max-content;
+    bottom: 0;
     background-color: var(--White-transparent);
+    border-right: var(--Grey500) 0.01em solid;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    padding-left: 12px;
+    overflow-y: auto;
+
+    height: fit-content;
+
+    /*
+    height: 68vh;
+    min-height: 10vh;
+
+    height: 110vh;
+
     border-radius: 10px;
     opacity: 0.8;
     border: 1px solid var(--Grey200);
-    z-index: 3;
-    position: sticky;
-    width: fit-content;
-    top: 12rem;
-    padding: 1em;
+    top: 0;
+    height: auto;
+    */
 }
 
 .section-nav a {
     text-decoration: none;
     display: block;
-    padding: .125rem 0;
+    padding: 6px 24px;
     color: var(--Grey600);
     transition: all 50ms ease-in-out;
     /* 💡 This small transition makes setting of the active state smooth */
+    border-radius: 2px 0 0 2px;
+
 }
 
 .section-nav a:hover,
 .section-nav a:focus {
-    color: var(--Grey900);
+    background-color: var(--Grey300) !important;
+    color: var(--Grey900) !important;
+    font-weight: 500;
+    border-radius: 2px 0 0 2px;
+
 }
+
 
 .section-nav.APPOINTA a:hover,
 .section-nav a:focus {
@@ -1942,7 +2006,7 @@ button.passwordArr {
     padding: 0.8em 0.5em;
     transition: background-color 0.3s ease;
     border-radius: 6px;
-    border: 0.01em solid var(--colorTeal-light);
+    border: 0.01em solid var(--colorTealDk);
 
 
     background: var(--colorTealLtest);
@@ -1963,7 +2027,8 @@ button.passwordArr {
     /*top 0.8, left and right 1*/
     margin-bottom: 1em;
     border-radius: 6px;
-    border: 0.06em solid var(--GLORIFY-orange);
+    /*     border: 0.06em solid var(--GLORIFY-orange); */
+
     color: var(--colorTealDk);
     background: var(--colorWarm);
     transition: background-color 0.3s ease;
@@ -2039,6 +2104,10 @@ button.passwordArr {
 
 /* changed media query from 800 to 1000*/
 
+.wrapper {
+    max-width: 1200px;
+    margin: auto;
+}
 
 @media all and (max-width: 1080px) {
 
@@ -3340,7 +3409,6 @@ body .flex-container.Mobile {
         width: 35px;
         height: 35px;
     }
-
 }
 
 /* intro */
@@ -3356,10 +3424,7 @@ body .flex-container.Mobile {
     width: 1.2em;
 }
 
-.wrapper {
-    max-width: 1200px;
-    margin: auto;
-}
+
 
 
 @media screen and (max-width: 480px) {
@@ -4046,6 +4111,10 @@ body .flex-container.Mobile {
     margin-top: 2vw;
     margin-bottom: 2vw;
     margin-right: 2vw;
+}
+
+.paddingNone {
+    padding: 0 !important;
 }
 
 .paddingS {
