--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ html {
     color: var(--Grey800);
     font-size: 16px;
     font-family: 'Lato', sans-serif;
-    height: 100%;
+    height: var(--height100);
 
 
 }
@@ -126,7 +126,7 @@ html {
 
 body {
     width: 100%;
-    height: 100%;
+    height: var(--height100);
     margin: 0;
     padding: 0;
     min-height: 100vh;
@@ -556,6 +556,7 @@ polygon {
   }  */
 .main {
     height: 100%;
+
 }
 
 .header-unpin {
@@ -1166,7 +1167,7 @@ main>nav {
 .section-nav li.active>a {
     color: var(--Grey900);
     font-weight: 500;
-    border-right: var(--Grey900) 0.01em solid;
+    border-right: var(--Grey900) .06em solid;
     background-color: var(--Grey100);
 
 }
@@ -1176,22 +1177,30 @@ main>nav {
 
 /* Sidebar Navigation */
 .section-nav {
+    position: -webkit-sticky;
     position: sticky;
     border-radius: 6px;
     z-index: 3;
-    margin-left: 0;
     width: max-content;
-    bottom: 0;
     background-color: var(--White-transparent);
-    border-right: var(--Grey500) 0.01em solid;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding-top: 16px;
+    padding-bottom: 16px;
     padding-left: 12px;
     overflow-y: auto;
-
     height: fit-content;
 
+ 
+    top: 50%;
+    transform: translateY(-50%);
+
     /*
+
+        translate: 50%
+
+    bottom: 0;
+    left:0px;
+
+
     height: 68vh;
     min-height: 10vh;
 
@@ -1206,13 +1215,14 @@ main>nav {
 }
 
 .section-nav a {
+    border-right: var(--Grey400) 0.01em solid;
     text-decoration: none;
     display: block;
-    padding: 6px 24px;
+    padding: 6px 16px;
     color: var(--Grey600);
     transition: all 50ms ease-in-out;
     /* 💡 This small transition makes setting of the active state smooth */
-    border-radius: 2px 0 0 2px;
+    border-radius: 6px 0 0 6px;
 
 }
 
@@ -1221,7 +1231,7 @@ main>nav {
     background-color: var(--Grey300) !important;
     color: var(--Grey900) !important;
     font-weight: 500;
-    border-radius: 2px 0 0 2px;
+    border-radius: 6px 0 0 6px;
 
 }
 
@@ -2106,6 +2116,11 @@ button.passwordArr {
 
 .wrapper {
     max-width: 1200px;
+    margin: auto;
+}
+
+.wrapperL {
+    max-width: 1600px;
     margin: auto;
 }
 
