--- a/main.css
+++ b/main.css
@@ -1786,7 +1786,7 @@ input {
 button.passwordArr {
     z-index: 99;
     padding: 0;
-    margin-top: -1.26em;
+    margin-top: -8px;
     color: var(--Grey900);
 }
 
@@ -3143,8 +3143,13 @@ button.passwordArr {
 .item input {
     display: none;
 }
+label{
+    line-height: 26px;
+    color: var(--Grey900);
+    font-weight: 300;
 
-label {
+}
+li label{
     display: block;
     opacity: 0.5;
     height: 46px;
@@ -3154,7 +3159,7 @@ label {
     color: var(--Grey800);
 }
 
-label:hover {
+li label:hover {
     opacity: 0.75;
     cursor: pointer;
     background-color: var(--Grey200);
