--- a/main.css
+++ b/main.css
@@ -4486,35 +4486,41 @@ img {
 }
 
 /* The Modal (background) */
+
+
 .modal {
     display: none;
     /* Hidden by default */
     position: fixed;
     /* Stay in place */
-    z-index: 4;
-    /* Sit on top */
-    padding-top: 2em;
-    /* Location of the box */
-    left: 0;
+    z-index: 99;
     top: 0;
+    left: 0;
     width: 100%;
-    /* Full width */
     height: 100%;
-    /* Full height */
     overflow: auto;
     /* Enable scroll if needed */
     background-color: rgb(255, 255, 255);
     /* Fallback color */
-    background-color: rgba(255, 255, 255, 0.96);
+    background-color: rgba(0, 0, 0, 0.96);
     /* Black w/ opacity */
+
+
 }
 
 /* Modal Content (image) */
 .modal-content {
     margin: auto;
     display: block;
+    top: 50%;
+    left: 0;
+    transform: translateY(50%);
     width: 95%;
+/* 
+    width: 95%;
+    height: auto;
     opacity: 1 !important;
+    */
 }
 
 .modal-content:hover {
@@ -4568,12 +4574,28 @@ img {
 /* The Close Button */
 .modal-close {
     position: absolute;
-    top: 15px;
-    right: 35px;
+    top: 0;
+    right: 0;
     color: var(--Grey600);
     font-size: 40px;
     font-weight: bold;
     transition: 0.3s;
+    z-index: 99;
+
+}
+
+.iconXforModal {
+    height: 48px;
+    width: 48px;
+    background-color: var(--Grey100);
+    border-radius: 32px;
+}
+.iconXforModal:hover,
+.iconXforModal:focus {
+    height: 48px;
+    width: 48px;
+    background-color: var(--Grey300);
+    border-radius: 32px;
 }
 
 .modal-close:hover,
